ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4/input.ts:1:6
  |
1 | enum void {
  |      ^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4/input.ts:1:1
  |
1 | enum void {
  | ^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4/input.ts:1:1
  |
1 | enum void {
  | ^^^^

